# mvc

./: .gitignore  README.md  pyproject.toml
mvc/: __main__.py  core.py  helpers.py
test/: clean_env.py
test/subws0/: test_load.py
test/subws1/: test_create.py
tests/: clean_env.py  test_helpers.py  test_mvc.py
tests/subws0/: test_load.py
tests/subws1/: test_create.py
