[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "mvc"
version = "0.1.0"
description = "Mini Version Control"
authors = [
    {name = "Jesper Borchsenius Seegert", email = "jelle284@hotmail.com"},
]
readme = "README.md"
requires-python = ">=3.6"
dependencies = []

[project.scripts]
mvc = "mvc.__main__:main"
